2010-07-16  Dario Rodriguez <dario.rodriguez@artica.es>

	* misc/pandora_file.cc: fixed unclosed directory with function closedir.

2010-07-16  Dario Rodriguez <dario.rodriguez@artica.es>

	* misc/pandora_file.cc, pandora_file.h: Added function to remove directories
	recursively

        * win32/pandora_windows_service.cc, pandora_windows_service.h: Added
        support for unzip collections and improved functionality to manage
	collections.

2010-07-14  Dario Rodriguez <dario.rodriguez@artica.es>

        * win32/pandora_agent_conf.cc, pandora_agent_conf.h: Added functionality
        to get collection from configuration file.
        * win32/pandora_windows_service.cc, pandora_windows_service.h: Added
        support for manage collections

2010-07-13  Dario Rodriguez  <dario.rodriguez@artica.es>

	* pandora_agent_conf.cc: Added support to parse collections
	* pandora_agent_conf.h: Added support to parse collections

2010-07-12  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.h, modules/pandora_module_factory.cc,
	  modules/pandora_module.cc, pandora_windows_service.cc: Added the
	  module_cron feature to schedule modules using a cron-like syntax and
	  some small fixes.

2010-07-06  Ramon Novoa  <rnovoa@artica.es>

	* pandora_windows_service.cc: Fixed the autotime feature. Was not
	  working since tinyXML was removed.

2010-07-05  Raul Mateos  <raulfopandora@gmail.com>

	* bin/pandora_agent.conf: Added example of D Drive. Added comments
	to some modules. Added lost module_begin. Improved command.

2010-07-02  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.h, modules/pandora_module_factory.cc,
	  modules/pandora_module.cc, pandora_windows_service.cc: Added the
	  module_condition feature. See http://openideas.info/wiki/ for more
	  information.

2010-06-30  Ramon Novoa  <rnovoa@artica.es>

	* windows/pandora_wmi.cc: getDiskFreeSpacePercent should not return
	  any value if the drive does not exist. Fixed.
